# cuda-point-rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.h  camera_controller.h  cuda_vector.h  main_app.h  point_cloud.h  point_cloud_2.h  rasterization.h  renderer.h  ui.h
src/: camera.cpp  camera_controller.cpp  main.cpp  main_app.cpp  point_cloud.cpp  point_cloud_2.cpp  rasterization.cu  renderer.cpp  ui.cpp
tests/: imgui.ini  imgui_test.cpp  test_camera.py  test_cone.py  test_pdal.cpp  test_point_cloud_2.cpp  test_renderer.cpp
